--- a/css/style.css
+++ b/css/style.css
@@ -64,10 +64,6 @@ main{
     font-weight: bold;
 }
 
-
-
-
-
 .arrow{
     position:absolute;
     width: 2rem;
@@ -92,10 +88,11 @@ main{
     margin: 0.5rem;
     overflow: auto;
     margin-bottom:15%;
+    padding-top:15%;
     align-items: flex-start;
     padding: 0.5rem;
+    background-color: white;
 }
-
 
 .titulo_filtros{
     height:5%;
@@ -111,9 +108,9 @@ main{
     text-align: center;
     padding: 0.5rem;
     margin: 1.2rem 0 1.2rem 0;
-    align-items: flex-start;
-    
+    align-items: flex-start; 
 }
+
 .a_filtros{
     margin-top: 0.5rem;
     font-size: 0.7rem;
@@ -127,10 +124,112 @@ main{
     height: 3.8rem;
     width: 3.8rem;
     align-self: center;
-    
 }
 
 .img_favoritos{
-    max-width: 10%;
-    max-height: 10%;
+    height: 3.8rem;
+    width: 3.8rem;
+    align-self: center;
+}
+
+.ul_horizontal{
+    height: 15%;
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    border: 0.1rem solid black;
+    margin: 0.5rem;
+    overflow: auto;
+    margin-bottom:15%;
+    padding-top:15%;
+    align-items: flex-start;
+    padding: 0.5rem;
+    padding-left: 1rem;
+}
+
+.li_favoritos{
+    width:25%;
+    height: 5rem;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin: 1.2rem 0 1.2rem 0;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.resultado_img{
+    width:50%;
+    height: 80%;
+    max-width: 10rem;
+}
+
+.resultado_li{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 1.5rem;
+}
+
+.resultado_main{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    height: 80%;
+}
+.resultado_ul{
+    height: 100%;
+    width:80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    margin-top: 5rem;
+}
+
+.resultado_h2{
+    margin-top: 2rem;
+}
+
+.img_compra{
+    max-width: 100%;
+    max-height: 100%;
+    width: 100%;
+}
+
+.ingredientes_ul{
+    height: 45%;
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin: 0.5rem;
+    margin-bottom:15%;
+    padding-top:15%;
+    align-items: flex-start;
+    padding: 0.5rem;
+    text-align: left;
+}
+
+.ingredientes_li{
+    height: 20%;
+    width: 50%;
+    font-size: 0.8rem;
+    margin-bottom: 0.3rem;
+    text-align: center;
+}
+
+.p{
+    margin-bottom: 1rem;
+}
+
+.ul_receita{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 100%;
+    text-align: left;
+    font-size: 1rem;
 }
