--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,12 @@ body {
     margin-bottom: 1.5rem;
 }
 
+.resultado_a{
+    margin-left: 1rem;
+    color: black;
+    text-decoration: none;
+}
+
 .resultado_main{
     display: flex;
     flex-direction: column;
