--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,8 @@ body {
 .ul_horizontal{
     display:flex;
     flex-direction: column;
-    width: 85%;
+    align-self: center;
+    width: 100%;
     height:24%;
     border: 0.2rem solid #47E188;
     border-radius: 0.5rem;
@@ -465,4 +466,31 @@ body {
 .h3_mapa, .p_mapa {
     font-family:'Noticia texte', serif;
     font-size: 1.3rem;
+}
+
+.li_busca_receitas_receita{
+    width: 85%;
+    justify-content: center;
+
+}
+
+
+.bd_loading{
+    background-color: #37AD69;
+    font-family: 'Open Sans', sans-serif;
+    height: 100%;
+}
+
+.mn_loading{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.h1_loading{
+    color: white;
+    font-size: 4.5rem;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
 }
