--- a/css/style.css
+++ b/css/style.css
@@ -372,6 +372,7 @@ body {
     box-shadow:.2rem .2rem .2rem #A6A29F;
     font-size: 1rem;
     padding: 0.1rem 0.5rem 0.1rem 0.5rem;
+    margin: 0 0.2rem 0 0.2rem;
     text-decoration: none;
     border-radius: 0.1rem;
     text-align: center;
@@ -493,4 +494,15 @@ body {
     font-size: 4.5rem;
     font-family: 'Open Sans', sans-serif;
     font-weight: bold;
+}
+
+.img_lupa{
+    width: 2.5rem;
+    height: 1.5rem;
+}
+
+.ul_buscar, li{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
